--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2002-12-31  Martin Baulig  <martin@ximian.com>
+
+	* backends/mono-csharp/MonoCSharpLanguageBackend.cs: The big type
+	table rewrite; the JIT now allocates types in continuous memory
+	areas rather than using an individually malloc()ed block for each
+	type.
+
 2002-12-30  Martin Baulig  <martin@ximian.com>
 
 	* backends/mono-csharp/MonoCSharpLanguageBackend.cs: The big
