2002-12-31  Martin Baulig  <martin@ximian.com>
	* frontends/scripting/Parser.jay: Added `print $name'.

svn path=/trunk/debugger/; revision=10023

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-12-31  Martin Baulig  <martin@ximian.com>
 
+	* frontends/scripting/Parser.jay: Added `print $name'.
+
+2002-12-31  Martin Baulig  <martin@ximian.com>
+
 	* frontends/scripting/Tokenizer.cs: Only recognize the short
 	keywords at the start of the line; `$' starts an identifier, so
 	don't recognize any keywords in it.
