--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-01-02  Martin Baulig  <martin@ximian.com>
 
+	* backends/Process.cs (Process.Inferior): Removed this property.
+	The IInferior is now a private interface and is not exposed to the
+	outside.
+
+2003-01-02  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/ILanguageBackend.cs: Moved to ../backends.
 
 	* backends/ILanguageBackend.cs: This is now an internal interface.
