--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-01-04  Martin Baulig  <martin@ximian.com>
 
+	* frontends/scripting/Parser.jay: Added the array access
+	expression "print $a [5]".
+
+2003-01-04  Martin Baulig  <martin@ximian.com>
+
 	* frontends/scripting/Parser.jay (variable_expression): Move the
 	`STAR variable_expression' rule above the struct element one.
 	Added grouping expression "print (*$c.Object).Foo".
