--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-01-04  Martin Baulig  <martin@ximian.com>
 
+	* frontends/scripting/Parser.jay: Added a couple of `assert'
+	commands to be used in a test suite.
+
+2003-01-04  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/ITargetObject.cs (Kind): Moved to ITargetType.
 
 	* interfaces/ITargetType.cs (Kind): Moved this property here.
