2003-01-05  Martin Baulig  <martin@ximian.com>
	* NEWS: Added a new item :-)

	* RELEASE-NOTES-0.1.0.txt: Added a comment about this release
	which never really happened.

svn path=/trunk/debugger/; revision=10179

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+January 5th, 2003 - Martin Baulig
+---------------------------------
+
+Added a note to RELEASE-NOTES-0.1.0.txt about the release which never really happened.
+
+After an almost complete rewrite of the SingleSteppingEngine to support debugging
+multi-threaded applications, the debugger is now getting more and more stable again.
+
+Today, the debugger is entering a feature freeze for the 0.2.0 release.  My main focus is
+now fixing all the remaining bugs and stabilizing all the existing features to make the
+debugger actually usable.
+
 October 15th, 2002 - Martin Baulig
 ----------------------------------
 
