--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2003-01-05  Martin Baulig  <martin@ximian.com>
 
+	* NEWS: Added a new item :-)
+
+	* RELEASE-NOTES-0.1.0.txt: Added a comment about this release
+	which never really happened.
+
+2003-01-05  Martin Baulig  <martin@ximian.com>
+
 	* test/test.in: Added `test' target to run all the tests.
 
 2003-01-05  Martin Baulig  <martin@ximian.com>
