--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-01-06  Martin Baulig  <martin@ximian.com>
+
+	* tests/TestManagedTypes.cmd: Added a few more test cases here.
+
+2003-01-06  Martin Baulig  <martin@ximian.com>
+
+	* frontends/scripting/: It's called `accessible', not `accessable'.
+
 2003-01-05  Martin Baulig  <martin@ximian.com>
 
 	* NEWS: Added a new item :-)
