--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-01-06  Martin Baulig  <martin@ximian.com>
 
+	* doc/debugger-status.txt: Added a "How you can help with the
+	debugger" section.
+
+2003-01-06  Martin Baulig  <martin@ximian.com>
+
 	* doc/debugger-status.txt: Added a few notes about the current
 	status here.
 
